[ruby/prism] Do not leak explicit encoding

Fixes [Bug #20744]

https://github.com/ruby/prism/commit/f1b8b1b2a2