test/prism/locals_test.rb
@@ -9,6 +9,10 @@
 # to test on the most recent versions.
 return if !defined?(RubyVM::InstructionSequence) || RUBY_VERSION < "3.4.0"
 
+# If we're on Ruby 3.4.0 and the default parser is Prism, then there is no point
+# in comparing the locals because they will be the same.
+return if RubyVM::InstructionSequence.compile("").to_a[4][:parser] == :prism
+
 # In Ruby 3.4.0, the local table for method forwarding changed. But 3.4.0 can
 # refer to the dev version, so while 3.4.0 still isn't released, we need to
 # check if we have a high enough revision.
